feat: improve extractor to skip long code blocks and update translations

--- a/packages/i18nexus-demo/lib/translations/en.json
+++ b/packages/i18nexus-demo/lib/translations/en.json
@@ -1,9 +1,14 @@
 {
   "1. Install Packages": "1. Install Packages",
   "1. Server Layout (app/layout.tsx)": "1. Server Layout (app/layout.tsx)",
+  "1. 설치": "1. Installation",
   "2. Client Component (app/page.tsx)": "2. Client Component (app/page.tsx)",
   "2. Wrap Korean Text (Optional)": "2. Wrap Korean Text (Optional)",
+  "2. 번역 파일 설정 (권장)": "2. Setup Translation Files (Recommended)",
+  "3. Provider 설정": "3. Provider Setup",
   "3. Setup Provider (Required)": "3. Setup Provider (Required)",
+  "4. 컴포넌트에서 사용하기": "4. Use in Components",
+  "5. i18nexus-cli 도구 (선택사항)": "5. i18nexus-cli Tools (Optional)",
   "API Reference": "API Reference",
   "Adds only new keys found in your code": "Adds only new keys found in your code",
   "After": "After",
@@ -17,6 +22,7 @@
   "Before": "Before",
   "Before & After Example": "Before & After Example",
   "CLI Tools Guide": "CLI Tools Guide",
+  "CLI 도구": "CLI Tools",
   "Client Components": "Client Components",
   "Collaborate with translators by syncing translations with Google Sheets": "Collaborate with translators by syncing translations with Google Sheets",
   "Complete Workflow": "Complete Workflow",
@@ -33,13 +39,11 @@
   "Enable Google Sheets API": "Enable Google Sheets API",
   "Extract Translation Keys": "Extract Translation Keys",
   "Extract translation keys from your code and automatically merge with existing translations": "Extract translation keys from your code and automatically merge with existing translations",
-  "Extract translation keys from your code and generate translation files": "Extract translation keys from your code and generate translation files",
   "From Installation to Advanced Usage": "From Installation to Advanced Usage",
   "Full SSR Support": "Full SSR Support",
   "Full type safety and autocomplete": "Full type safety and autocomplete",
   "Generate translation files from your wrapped text": "Generate translation files from your wrapped text",
   "Generated Files": "Generated Files",
-  "Generated Output (JSON)": "Generated Output (JSON)",
   "Google Sheets Integration": "Google Sheets Integration",
   "Google Sheets integration": "Google Sheets integration",
   "Hook for accessing the translation function in client components": "Hook for accessing the translation function in client components",
@@ -90,16 +94,160 @@
   "i18nexus Complete Guide": "i18nexus Complete Guide",
   "i18nexus Solutions": "i18nexus Solutions",
   "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.": "Learn step-by-step how to integrate and use i18nexus in your project.",
+  "개발 도구들 (코드 변환, 추출, 구글 시트 연동)": "Development tools (code transformation, extraction, Google Sheets integration)",
   "개발자 경험 최우선": "Developer Experience First",
+  "구글 시트 업로드": "Upload to Google Sheets",
+  "구글 시트에서 가져오기": "Download from Google Sheets",
+  "구글 시트에서 팀원들과 협업하여 번역 진행": "Collaborate with team members on translations via Google Sheets",
+  "구글 시트의 번역 데이터를 로컬 JSON 파일로 다운로드합니다.": "Downloads translation data from Google Sheets to local JSON files.",
+  "구글 시트의 변경사항을 실시간으로 감지하고 자동\n                    다운로드합니다.": "Detects changes in Google Sheets in real-time and automatically downloads them.",
+  "권장하는 방식:": "Recommended approach:",
+  "기존 번역 문자열을 수정합니다.": "Modifies existing translation strings.",
+  "대화형:": "Interactive:",
+  "동기화": "Sync",
+  "로 번역 데이터 다운로드": "to download translation data",
+  "로 번역 데이터 업로드": "to upload translation data",
+  "로컬 JSON 번역 파일을 구글 시트로 업로드합니다.": "Uploads local JSON translation files to Google Sheets.",
+  "로컬 파일 업로드": "Upload Local Files",
+  "명령어 실행 시 네임스페이스,\n                      키, 기본 텍스트를 입력하라는 프롬프트가 나타납니다.": "Prompts for namespace, key, and default text when running the command.",
   "불필요한 재렌더링 방지 및 상태 관리 최적화": "Prevents unnecessary re-renders and optimizes state management",
+  "번역 데이터를 JSON 파일로\n                분리하여 관리하면 i18nexus-cli와의 통합이 용이하고, 번역 관리가\n                효율적입니다.": "Managing translation data in separate JSON files makes integration with i18nexus-cli easier and translation management more efficient.",
+  "번역 문자열과 모든 번역을 삭제합니다.": "Deletes the translation string and all translations.",
+  "번역 작업": "Translation Work",
+  "번역 키 삭제": "Delete Translation Key",
+  "번역 키 수정": "Update Translation Key",
+  "번역 파일 생성": "Create Translation Files",
+  "번역 함수 사용": "Use Translation Function",
   "사용 가이드": "Usage Guide",
+  "사용 예시:": "Usage Example:",
+  "새 번역 키 추가": "Add New Translation Key",
   "설계 원칙": "Design Principles",
   "성능 최적화": "Performance Optimized",
+  "시스템 아키텍처": "System Architecture",
+  "실시간 감지 (선택)": "Real-time Detection (Optional)",
+  "실시간 동기화": "Real-time Sync",
   "아키텍처 및 원칙": "Architecture & Principles",
+  "언어 전환 컴포넌트": "Language Switcher Component",
+  "으로 구글 시트 변경사항 실시간 반영": "for real-time Google Sheets change reflection",
+  "이 작업은 되돌릴 수 없습니다.\n                      모든 언어의 번역이 삭제됩니다.": "This operation cannot be undone. All translations will be deleted.",
   "자동 코드 변환 및 번역 관리": "Automatic code transformation and translation management",
   "자동화 지향": "Automation First",
+  "주의:": "Warning:",
+  "중요:": "Important:",
+  "참고:": "Note:",
   "최소한의 설정으로 최대한의 기능 제공": "Minimal configuration for maximum functionality",
+  "코드 작성": "Write Code",
+  "클라이언트 라이브러리 (React 컴포넌트, 훅 등)": "Client Library (React components, hooks, etc.)",
+  "패키지 구조": "Package Structure",
+  "패키지 설치": "Package Installation",
+  "프로젝트에 새로운 번역 문자열을 추가합니다.": "Adds a new translation string to the project.",
+  "플러그인 아키텍처로 기능 확장 가능": "Extensible with plugin architecture",
+  "한국어": "Korean",
+  "한국어를 키로 사용하여 환영합니다 형태로 코드 작성": "Write code using Korean as keys like 환영합니다",
+  "핵심 컴포넌트": "Core Components",
   "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "Built with modern principles and designed for scalability and maintainability.",
+  "홈": "Home",
+  "확장성": "Scalability",
   "환영합니다": "Welcome",
-  "💡 Try switching languages - the selection is saved in cookies!": "💡 Try switching languages - the selection is saved in cookies!"
+  "• React 18 동시성 지원": "• React 18 Concurrency Support",
+  "• add-string - 문자열 추가": "• add-string - Add String",
+  "• import - JSON 가져오기": "• import - Import JSON",
+  "• listen - 실시간 업데이트": "• listen - Real-time Updates",
+  "• pull - 번역 다운로드": "• pull - Download Translations",
+  "• 강력한 TypeScript 지원": "• Strong TypeScript Support",
+  "• 구글 시트 자동 동기화": "• Auto Sync with Google Sheets",
+  "• 다양한 스토리지 백엔드": "• Multiple Storage Backends",
+  "• 메모이제이션 활용": "• Memoization Optimization",
+  "• 번역 키 자동 추출": "• Auto Translation Key Extraction",
+  "• 상세한 에러 메시지": "• Detailed Error Messages",
+  "• 실시간 업데이트": "• Real-time Updates",
+  "• 지연 로딩 지원": "• Lazy Loading Support",
+  "• 직관적이고 예측 가능한 API": "• Intuitive and Predictable API",
+  "• 최적화된 상태 관리": "• Optimized State Management",
+  "• 커스텀 번역 로더": "• Custom Translation Loader",
+  "• 커스텀 포맷터": "• Custom Formatter",
+  "• 포괄적인 문서화": "• Comprehensive Documentation",
+  "• 플러그인 시스템": "• Plugin System",
+  "• 하드코딩된 문자열 자동 래핑": "• Auto Wrap Hardcoded Strings",
+  "⚙️ 설정 파일 (i18nexus.config.js)": "⚙️ Config File (i18nexus.config.js)",
+  "📁 디렉토리 구조": "📁 Directory Structure",
+  "📦 설치": "📦 Installation",
+  "🔄 권장 워크플로우": "🔄 Recommended Workflow",
+  "🛠️ 주요 명령어": "🛠️ Main Commands",
+  "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.": "Learn step-by-step how to integrate and use i18nexus in your project.",
+  "개발자 경험 최우선": "Developer Experience First",
+  "구글 시트 업로드": "Upload to Google Sheets",
+  "구글 시트에서 가져오기": "Download from Google Sheets",
+  "구글 시트에서 팀원들과 협업하여 번역 진행": "Collaborate with team members on translations via Google Sheets",
+  "구글 시트의 번역 데이터를 로컬 JSON 파일로 다운로드합니다.": "Downloads translation data from Google Sheets to local JSON files.",
+  "구글 시트의 변경사항을 실시간으로 감지하고 자동\n                    다운로드합니다.": "Detects changes in Google Sheets in real-time and automatically downloads them.",
+  "권장하는 방식:": "Recommended approach:",
+  "기존 번역 문자열을 수정합니다.": "Modifies existing translation strings.",
+  "대화형:": "Interactive:",
+  "동기화": "Sync",
+  "로 번역 데이터 다운로드": "to download translation data",
+  "로 번역 데이터 업로드": "to upload translation data",
+  "로컬 JSON 번역 파일을 구글 시트로 업로드합니다.": "Uploads local JSON translation files to Google Sheets.",
+  "로컬 파일 업로드": "Upload Local Files",
+  "명령어 실행 시 네임스페이스,\n                      키, 기본 텍스트를 입력하라는 프롬프트가 나타납니다.": "Prompts for namespace, key, and default text when running the command.",
+  "불필요한 재렌더링 방지 및 상태 관리 최적화": "Prevents unnecessary re-renders and optimizes state management",
+  "번역 데이터를 JSON 파일로\n                분리하여 관리하면 i18nexus-cli와의 통합이 용이하고, 번역 관리가\n                효율적입니다.": "Managing translation data in separate JSON files makes integration with i18nexus-cli easier and translation management more efficient.",
+  "번역 문자열과 모든 번역을 삭제합니다.": "Deletes the translation string and all translations.",
+  "번역 작업": "Translation Work",
+  "번역 키 삭제": "Delete Translation Key",
+  "번역 키 수정": "Update Translation Key",
+  "번역 파일 생성": "Create Translation Files",
+  "번역 함수 사용": "Use Translation Function",
+  "사용 가이드": "Usage Guide",
+  "사용 예시:": "Usage Example:",
+  "새 번역 키 추가": "Add New Translation Key",
+  "설계 원칙": "Design Principles",
+  "성능 최적화": "Performance Optimized",
+  "시스템 아키텍처": "System Architecture",
+  "실시간 감지 (선택)": "Real-time Detection (Optional)",
+  "실시간 동기화": "Real-time Sync",
+  "아키텍처 및 원칙": "Architecture & Principles",
+  "언어 전환 컴포넌트": "Language Switcher Component",
+  "으로 구글 시트 변경사항 실시간 반영": "for real-time Google Sheets change reflection",
+  "이 작업은 되돌릴 수 없습니다.\n                      모든 언어의 번역이 삭제됩니다.": "This operation cannot be undone. All translations will be deleted.",
+  "자동 코드 변환 및 번역 관리": "Automatic code transformation and translation management",
+  "자동화 지향": "Automation First",
+  "주의:": "Warning:",
+  "중요:": "Important:",
+  "참고:": "Note:",
+  "최소한의 설정으로 최대한의 기능 제공": "Minimal configuration for maximum functionality",
+  "코드 작성": "Write Code",
+  "클라이언트 라이브러리 (React 컴포넌트, 훅 등)": "Client Library (React components, hooks, etc.)",
+  "패키지 구조": "Package Structure",
+  "패키지 설치": "Package Installation",
+  "프로젝트에 새로운 번역 문자열을 추가합니다.": "Adds a new translation string to the project.",
+  "플러그인 아키텍처로 기능 확장 가능": "Extensible with plugin architecture",
+  "한국어": "Korean",
+  "한국어를 키로 사용하여 환영합니다 형태로 코드 작성": "Write code using Korean as keys like 환영합니다",
+  "핵심 컴포넌트": "Core Components",
+  "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "Built with modern principles and designed for scalability and maintainability.",
+  "홈": "Home",
+  "확장성": "Scalability",
+  "환영합니다": "Welcome",
+  "💡 Try switching languages - the selection is saved in cookies!": "💡 Try switching languages - the selection is saved in cookies!",
+  "• React 18 동시성 지원": "• React 18 Concurrency Support",
+  "• add-string - 문자열 추가": "• add-string - Add String",
+  "• import - JSON 가져오기": "• import - Import JSON",
+  "• listen - 실시간 업데이트": "• listen - Real-time Updates",
+  "• pull - 번역 다운로드": "• pull - Download Translations",
+  "• 강력한 TypeScript 지원": "• Strong TypeScript Support",
+  "• 구글 시트 자동 동기화": "• Auto Sync with Google Sheets",
+  "• 다양한 스토리지 백엔드": "• Multiple Storage Backends",
+  "• 메모이제이션 활용": "• Memoization Optimization",
+  "• 번역 키 자동 추출": "• Auto Translation Key Extraction",
+  "• 상세한 에러 메시지": "• Detailed Error Messages",
+  "• 실시간 업데이트": "• Real-time Updates",
+  "• 지연 로딩 지원": "• Lazy Loading Support",
+  "• 직관적이고 예측 가능한 API": "• Intuitive and Predictable API",
+  "• 최적화된 상태 관리": "• Optimized State Management",
+  "• 커스텀 번역 로더": "• Custom Translation Loader",
+  "• 커스텀 포맷터": "• Custom Formatter",
+  "• 포괄적인 문서화": "• Comprehensive Documentation",
+  "• 플러그인 시스템": "• Plugin System",
+  "• 하드코딩된 문자열 자동 래핑": "• Auto Wrap Hardcoded Strings"
 }
