feat: redesign demo pages with blue/dark theme and separate Provider/CLI docs

--- a/packages/i18nexus-demo/lib/translations/ko.json
+++ b/packages/i18nexus-demo/lib/translations/ko.json
@@ -1,88 +1,104 @@
 {
-  "1. 설치": "1. 설치",
-  "2. 번역 파일 설정 (권장)": "2. 번역 파일 설정 (권장)",
-  "3. Provider 설정": "3. Provider 설정",
-  "4. 컴포넌트에서 사용하기": "4. 컴포넌트에서 사용하기",
-  "5. i18nexus-cli 도구 (선택사항)": "5. i18nexus-cli 도구 (선택사항)",
-  "CLI 도구": "CLI 도구",
-  "개발 도구들 (코드 변환, 추출, 구글 시트 연동)": "개발 도구들 (코드 변환, 추출, 구글 시트 연동)",
-  "개발자 경험 최우선": "개발자 경험 최우선",
-  "구글 시트 업로드": "구글 시트 업로드",
-  "구글 시트에서 가져오기": "구글 시트에서 가져오기",
-  "구글 시트에서 팀원들과 협업하여 번역 진행": "구글 시트에서 팀원들과 협업하여 번역 진행",
-  "구글 시트의 번역 데이터를 로컬 JSON 파일로 다운로드합니다.": "구글 시트의 번역 데이터를 로컬 JSON 파일로 다운로드합니다.",
-  "구글 시트의 변경사항을 실시간으로 감지하고 자동\n                    다운로드합니다.": "구글 시트의 변경사항을 실시간으로 감지하고 자동 다운로드합니다.",
-  "권장하는 방식:": "권장하는 방식:",
-  "기존 번역 문자열을 수정합니다.": "기존 번역 문자열을 수정합니다.",
-  "대화형:": "대화형:",
-  "동기화": "동기화",
-  "로 번역 데이터 다운로드": "로 번역 데이터 다운로드",
-  "로 번역 데이터 업로드": "로 번역 데이터 업로드",
-  "로컬 JSON 번역 파일을 구글 시트로 업로드합니다.": "로컬 JSON 번역 파일을 구글 시트로 업로드합니다.",
-  "로컬 파일 업로드": "로컬 파일 업로드",
-  "명령어 실행 시 네임스페이스,\n                      키, 기본 텍스트를 입력하라는 프롬프트가 나타납니다.": "명령어 실행 시 네임스페이스, 키, 기본 텍스트를 입력하라는 프롬프트가 나타납니다.",
-  "불필요한 재렌더링 방지 및 상태 관리 최적화": "불필요한 재렌더링 방지 및 상태 관리 최적화",
-  "번역 데이터를 JSON 파일로\n                분리하여 관리하면 i18nexus-cli와의 통합이 용이하고, 번역 관리가\n                효율적입니다.": "번역 데이터를 JSON 파일로 분리하여 관리하면 i18nexus-cli와의 통합이 용이하고, 번역 관리가 효율적입니다.",
-  "번역 문자열과 모든 번역을 삭제합니다.": "번역 문자열과 모든 번역을 삭제합니다.",
-  "번역 작업": "번역 작업",
-  "번역 키 삭제": "번역 키 삭제",
-  "번역 키 수정": "번역 키 수정",
-  "번역 파일 생성": "번역 파일 생성",
-  "번역 함수 사용": "번역 함수 사용",
-  "사용 가이드": "사용 가이드",
-  "사용 예시:": "사용 예시:",
-  "새 번역 키 추가": "새 번역 키 추가",
-  "설계 원칙": "설계 원칙",
-  "성능 최적화": "성능 최적화",
-  "시스템 아키텍처": "시스템 아키텍처",
-  "실시간 감지 (선택)": "실시간 감지 (선택)",
-  "실시간 동기화": "실시간 동기화",
-  "아키텍처 및 원칙": "아키텍처 및 원칙",
-  "언어 전환 컴포넌트": "언어 전환 컴포넌트",
-  "으로 구글 시트 변경사항 실시간 반영": "으로 구글 시트 변경사항 실시간 반영",
-  "이 작업은 되돌릴 수 없습니다.\n                      모든 언어의 번역이 삭제됩니다.": "이 작업은 되돌릴 수 없습니다. 모든 언어의 번역이 삭제됩니다.",
-  "자동 코드 변환 및 번역 관리": "자동 코드 변환 및 번역 관리",
-  "자동화 지향": "자동화 지향",
-  "주의:": "주의:",
-  "중요:": "중요:",
-  "참고:": "참고:",
-  "최소한의 설정으로 최대한의 기능 제공": "최소한의 설정으로 최대한의 기능 제공",
-  "코드 작성": "코드 작성",
-  "클라이언트 라이브러리 (React 컴포넌트, 훅 등)": "클라이언트 라이브러리 (React 컴포넌트, 훅 등)",
-  "패키지 구조": "패키지 구조",
-  "패키지 설치": "패키지 설치",
-  "프로젝트에 새로운 번역 문자열을 추가합니다.": "프로젝트에 새로운 번역 문자열을 추가합니다.",
-  "플러그인 아키텍처로 기능 확장 가능": "플러그인 아키텍처로 기능 확장 가능",
-  "한국어": "한국어",
-  "한국어를 키로 사용하여 환영합니다 형태로 코드 작성": "한국어를 키로 사용하여 환영합니다 형태로 코드 작성",
-  "핵심 컴포넌트": "핵심 컴포넌트",
-  "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.",
-  "홈": "홈",
-  "확장성": "확장성",
-  "환영합니다": "환영합니다",
-  "• React 18 동시성 지원": "• React 18 동시성 지원",
-  "• add-string - 문자열 추가": "• add-string - 문자열 추가",
-  "• import - JSON 가져오기": "• import - JSON 가져오기",
-  "• listen - 실시간 업데이트": "• listen - 실시간 업데이트",
-  "• pull - 번역 다운로드": "• pull - 번역 다운로드",
-  "• 강력한 TypeScript 지원": "• 강력한 TypeScript 지원",
-  "• 구글 시트 자동 동기화": "• 구글 시트 자동 동기화",
-  "• 다양한 스토리지 백엔드": "• 다양한 스토리지 백엔드",
-  "• 메모이제이션 활용": "• 메모이제이션 활용",
-  "• 번역 키 자동 추출": "• 번역 키 자동 추출",
-  "• 상세한 에러 메시지": "• 상세한 에러 메시지",
-  "• 실시간 업데이트": "• 실시간 업데이트",
-  "• 지연 로딩 지원": "• 지연 로딩 지원",
-  "• 직관적이고 예측 가능한 API": "• 직관적이고 예측 가능한 API",
-  "• 최적화된 상태 관리": "• 최적화된 상태 관리",
-  "• 커스텀 번역 로더": "• 커스텀 번역 로더",
-  "• 커스텀 포맷터": "• 커스텀 포맷터",
-  "• 포괄적인 문서화": "• 포괄적인 문서화",
-  "• 플러그인 시스템": "• 플러그인 시스템",
-  "• 하드코딩된 문자열 자동 래핑": "• 하드코딩된 문자열 자동 래핑",
-  "⚙️ 설정 파일 (i18nexus.config.js)": "⚙️ 설정 파일 (i18nexus.config.js)",
-  "📁 디렉토리 구조": "📁 디렉토리 구조",
-  "📦 설치": "📦 설치",
-  "🔄 권장 워크플로우": "🔄 권장 워크플로우",
-  "🛠️ 주요 명령어": "🛠️ 주요 명령어"
+  "Add English translations to en.json file": "en.json 파일에 영어 번역 추가",
+  "Add I18nProvider to layout.tsx": "layout.tsx에 I18nProvider 추가",
+  "Adds only new keys from code": "코드에서 찾은 새 키만 추가",
+  "After": "이후",
+  "API Reference": "API 레퍼런스",
+  "Auto wrap Korean text": "한국어 텍스트 자동 래핑",
+  "Automate your internationalization workflow with intelligent tools": "스마트 도구로 국제화 워크플로우를 자동화하세요",
+  "Automatic Text Wrapping": "자동 텍스트 래핑",
+  "Automatic text wrapping with CLI": "CLI로 자동 텍스트 래핑",
+  "Automatically saves language choice": "언어 선택 자동 저장",
+  "Automatically wrap hardcoded Korean strings in your code": "코드의 하드코딩된 한국어 문자열 자동 래핑",
+  "Automatically wraps Korean text with t() and adds imports": "한국어 텍스트를 t()로 감싸고 import 자동 추가",
+  "Basic Setup": "기본 설정",
+  "Basic Usage": "기본 사용법",
+  "Before": "이전",
+  "CLI Tools": "CLI 도구",
+  "Client Component (app/page.tsx)": "클라이언트 컴포넌트 (app/page.tsx)",
+  "Client Components": "클라이언트 컴포넌트",
+  "Complete React i18n Toolkit": "완전한 React i18n 툴킷",
+  "Complete Workflow": "완전한 워크플로우",
+  "Complex configuration": "복잡한 설정",
+  "Cookie Persistence": "쿠키 지속성",
+  "Cookie-based persistence": "쿠키 기반 지속성",
+  "Create Google Cloud project": "Google Cloud 프로젝트 생성",
+  "Create Service Account": "서비스 계정 생성",
+  "Current Language": "현재 언어",
+  "Detects Korean in string literals": "문자열 리터럴의 한국어 감지",
+  "Detects Korean in template literals": "템플릿 리터럴의 한국어 감지",
+  "Detects Korean text in JSX elements": "JSX 요소의 한국어 텍스트 감지",
+  "Done!": "완료!",
+  "Download": "다운로드",
+  "Download credentials JSON": "credentials JSON 다운로드",
+  "Enable Google Sheets API": "Google Sheets API 활성화",
+  "Extract Keys": "키 추출",
+  "Extract translation keys": "번역 키 추출",
+  "Extract translation keys and merge with existing files intelligently": "번역 키를 추출하고 기존 파일과 스마트하게 병합",
+  "Full type safety included": "완전한 타입 안전성 포함",
+  "Generate translation files from wrapped text": "래핑된 텍스트에서 번역 파일 생성",
+  "Google Sheets Integration": "Google Sheets 연동",
+  "Google Sheets sync": "Google Sheets 동기화",
+  "Hook for accessing translation function in client components": "클라이언트 컴포넌트에서 번역 함수에 접근하는 훅",
+  "Hook for language switching and state management": "언어 전환 및 상태 관리를 위한 훅",
+  "Hydration issues in SSR": "SSR의 하이드레이션 문제",
+  "I18nProvider": "I18nProvider",
+  "i18nexus Solutions": "i18nexus 솔루션",
+  "Install": "설치",
+  "Installation": "설치",
+  "Key Features": "주요 기능",
+  "Learn more": "더 알아보기",
+  "Live Demo": "라이브 데모",
+  "Manual file management": "수동 파일 관리",
+  "Manual text wrapping": "수동 텍스트 래핑",
+  "No layout shift on load": "로드 시 레이아웃 이동 없음",
+  "Optional": "선택사항",
+  "Perfect Next.js compatibility": "완벽한 Next.js 호환성",
+  "Powerful automation tools for wrapping text and managing translations": "텍스트 래핑 및 번역 관리를 위한 강력한 자동화 도구",
+  "Preserves all existing translations": "모든 기존 번역 보존",
+  "Preserves code formatting": "코드 포맷 유지",
+  "Quick Start": "빠른 시작",
+  "React Context provider with cookie-based language persistence and SSR support": "쿠키 기반 언어 지속성과 SSR 지원을 제공하는 React Context 프로바이더",
+  "Recommended Structure": "권장 구조",
+  "Server Components": "서버 컴포넌트",
+  "Server Layout (app/layout.tsx)": "서버 레이아웃 (app/layout.tsx)",
+  "Setup I18nProvider in layout.tsx with cookie detection": "layout.tsx에 쿠키 감지와 함께 I18nProvider 설정",
+  "Setup Provider": "Provider 설정",
+  "Setup Required": "설정 필요",
+  "Share Sheet with service account": "서비스 계정과 Sheet 공유",
+  "Shows detailed statistics": "상세한 통계 표시",
+  "Simple setup with defaults": "기본값으로 간단한 설정",
+  "Skips already wrapped text": "이미 래핑된 텍스트 건너뛰기",
+  "Smart Detection": "스마트 감지",
+  "Smart file merging": "스마트 파일 병합",
+  "Smart Key Extraction": "스마트 키 추출",
+  "Smart Merging Features": "스마트 병합 기능",
+  "Sorts keys alphabetically": "키를 알파벳순으로 정렬",
+  "SSR Ready": "SSR 준비 완료",
+  "Store in lib/translations/ as JSON": "lib/translations/에 JSON으로 저장",
+  "Switch Language": "언어 전환",
+  "Sync translations with Google Sheets for team collaboration": "팀 협업을 위해 Google Sheets와 번역 동기화",
+  "Sync with Sheets": "Sheets와 동기화",
+  "Team Collaboration": "팀 협업",
+  "The extractor intelligently merges with existing translations:": "extractor는 기존 번역과 스마트하게 병합합니다:",
+  "This demo follows the recommended Next.js App Router structure:": "이 데모는 권장되는 Next.js App Router 구조를 따릅니다:",
+  "Traditional i18n Problems": "기존 i18n 문제점",
+  "Translate": "번역하기",
+  "Translation Examples": "번역 예시",
+  "Translation Files": "번역 파일",
+  "Try switching - saved in cookies!": "전환해보세요 - 쿠키에 저장됩니다!",
+  "TypeScript": "TypeScript",
+  "TypeScript support": "TypeScript 지원",
+  "Upload": "업로드",
+  "Upload to Google Sheets for team translation": "팀 번역을 위해 Google Sheets에 업로드",
+  "Use 'use client' with useTranslation() hook": "'use client'와 함께 useTranslation() 훅 사용",
+  "Use Hooks": "훅 사용",
+  "Use useTranslation() in components": "컴포넌트에서 useTranslation() 사용",
+  "Why i18nexus?": "왜 i18nexus인가?",
+  "Wrap Korean Text": "한국어 텍스트 래핑",
+  "Your app is fully internationalized and ready to deploy": "앱이 완전히 국제화되어 배포 준비 완료",
+  "Zero Hydration": "제로 하이드레이션",
+  "Zero hydration issues": "하이드레이션 문제 제로",
+  "Zero hydration mismatch": "하이드레이션 불일치 제로",
+  "환영합니다": "환영합니다"
 }
