--- a/packages/i18nexus-demo/lib/translations/ko.json
+++ b/packages/i18nexus-demo/lib/translations/ko.json
@@ -1,104 +1,74 @@
 {
-  "Add English translations to en.json file": "en.json 파일에 영어 번역 추가",
-  "Add I18nProvider to layout.tsx": "layout.tsx에 I18nProvider 추가",
-  "Adds only new keys from code": "코드에서 찾은 새 키만 추가",
-  "After": "이후",
-  "API Reference": "API 레퍼런스",
-  "Auto wrap Korean text": "한국어 텍스트 자동 래핑",
-  "Automate your internationalization workflow with intelligent tools": "스마트 도구로 국제화 워크플로우를 자동화하세요",
-  "Automatic Text Wrapping": "자동 텍스트 래핑",
-  "Automatic text wrapping with CLI": "CLI로 자동 텍스트 래핑",
-  "Automatically saves language choice": "언어 선택 자동 저장",
-  "Automatically wrap hardcoded Korean strings in your code": "코드의 하드코딩된 한국어 문자열 자동 래핑",
-  "Automatically wraps Korean text with t() and adds imports": "한국어 텍스트를 t()로 감싸고 import 자동 추가",
-  "Basic Setup": "기본 설정",
-  "Basic Usage": "기본 사용법",
-  "Before": "이전",
-  "CLI Tools": "CLI 도구",
-  "Client Component (app/page.tsx)": "클라이언트 컴포넌트 (app/page.tsx)",
-  "Client Components": "클라이언트 컴포넌트",
-  "Complete React i18n Toolkit": "완전한 React i18n 툴킷",
-  "Complete Workflow": "완전한 워크플로우",
-  "Complex configuration": "복잡한 설정",
-  "Cookie Persistence": "쿠키 지속성",
-  "Cookie-based persistence": "쿠키 기반 지속성",
-  "Create Google Cloud project": "Google Cloud 프로젝트 생성",
-  "Create Service Account": "서비스 계정 생성",
-  "Current Language": "현재 언어",
-  "Detects Korean in string literals": "문자열 리터럴의 한국어 감지",
-  "Detects Korean in template literals": "템플릿 리터럴의 한국어 감지",
-  "Detects Korean text in JSX elements": "JSX 요소의 한국어 텍스트 감지",
-  "Done!": "완료!",
-  "Download": "다운로드",
-  "Download credentials JSON": "credentials JSON 다운로드",
-  "Enable Google Sheets API": "Google Sheets API 활성화",
-  "Extract Keys": "키 추출",
-  "Extract translation keys": "번역 키 추출",
-  "Extract translation keys and merge with existing files intelligently": "번역 키를 추출하고 기존 파일과 스마트하게 병합",
-  "Full type safety included": "완전한 타입 안전성 포함",
-  "Generate translation files from wrapped text": "래핑된 텍스트에서 번역 파일 생성",
-  "Google Sheets Integration": "Google Sheets 연동",
-  "Google Sheets sync": "Google Sheets 동기화",
-  "Hook for accessing translation function in client components": "클라이언트 컴포넌트에서 번역 함수에 접근하는 훅",
-  "Hook for language switching and state management": "언어 전환 및 상태 관리를 위한 훅",
-  "Hydration issues in SSR": "SSR의 하이드레이션 문제",
-  "I18nProvider": "I18nProvider",
-  "i18nexus Solutions": "i18nexus 솔루션",
-  "Install": "설치",
-  "Installation": "설치",
-  "Key Features": "주요 기능",
-  "Learn more": "더 알아보기",
-  "Live Demo": "라이브 데모",
-  "Manual file management": "수동 파일 관리",
-  "Manual text wrapping": "수동 텍스트 래핑",
-  "No layout shift on load": "로드 시 레이아웃 이동 없음",
-  "Optional": "선택사항",
-  "Perfect Next.js compatibility": "완벽한 Next.js 호환성",
-  "Powerful automation tools for wrapping text and managing translations": "텍스트 래핑 및 번역 관리를 위한 강력한 자동화 도구",
-  "Preserves all existing translations": "모든 기존 번역 보존",
-  "Preserves code formatting": "코드 포맷 유지",
-  "Quick Start": "빠른 시작",
-  "React Context provider with cookie-based language persistence and SSR support": "쿠키 기반 언어 지속성과 SSR 지원을 제공하는 React Context 프로바이더",
-  "Recommended Structure": "권장 구조",
-  "Server Components": "서버 컴포넌트",
-  "Server Layout (app/layout.tsx)": "서버 레이아웃 (app/layout.tsx)",
-  "Setup I18nProvider in layout.tsx with cookie detection": "layout.tsx에 쿠키 감지와 함께 I18nProvider 설정",
-  "Setup Provider": "Provider 설정",
-  "Setup Required": "설정 필요",
-  "Share Sheet with service account": "서비스 계정과 Sheet 공유",
-  "Shows detailed statistics": "상세한 통계 표시",
-  "Simple setup with defaults": "기본값으로 간단한 설정",
-  "Skips already wrapped text": "이미 래핑된 텍스트 건너뛰기",
-  "Smart Detection": "스마트 감지",
-  "Smart file merging": "스마트 파일 병합",
-  "Smart Key Extraction": "스마트 키 추출",
-  "Smart Merging Features": "스마트 병합 기능",
-  "Sorts keys alphabetically": "키를 알파벳순으로 정렬",
-  "SSR Ready": "SSR 준비 완료",
-  "Store in lib/translations/ as JSON": "lib/translations/에 JSON으로 저장",
-  "Switch Language": "언어 전환",
-  "Sync translations with Google Sheets for team collaboration": "팀 협업을 위해 Google Sheets와 번역 동기화",
-  "Sync with Sheets": "Sheets와 동기화",
-  "Team Collaboration": "팀 협업",
-  "The extractor intelligently merges with existing translations:": "extractor는 기존 번역과 스마트하게 병합합니다:",
-  "This demo follows the recommended Next.js App Router structure:": "이 데모는 권장되는 Next.js App Router 구조를 따릅니다:",
-  "Traditional i18n Problems": "기존 i18n 문제점",
-  "Translate": "번역하기",
-  "Translation Examples": "번역 예시",
-  "Translation Files": "번역 파일",
-  "Try switching - saved in cookies!": "전환해보세요 - 쿠키에 저장됩니다!",
-  "TypeScript": "TypeScript",
-  "TypeScript support": "TypeScript 지원",
-  "Upload": "업로드",
-  "Upload to Google Sheets for team translation": "팀 번역을 위해 Google Sheets에 업로드",
-  "Use 'use client' with useTranslation() hook": "'use client'와 함께 useTranslation() 훅 사용",
-  "Use Hooks": "훅 사용",
-  "Use useTranslation() in components": "컴포넌트에서 useTranslation() 사용",
-  "Why i18nexus?": "왜 i18nexus인가?",
-  "Wrap Korean Text": "한국어 텍스트 래핑",
-  "Your app is fully internationalized and ready to deploy": "앱이 완전히 국제화되어 배포 준비 완료",
-  "Zero Hydration": "제로 하이드레이션",
-  "Zero hydration issues": "하이드레이션 문제 제로",
-  "Zero hydration mismatch": "하이드레이션 불일치 제로",
-  "환영합니다": "환영합니다"
+  "(여기에 실제 GIF가 들어갑니다)": "(여기에 실제 GIF가 들어갑니다)",
+  "1️⃣ 언어 감지 및 설정": "1️⃣ 언어 감지 및 설정",
+  "2️⃣ 번역 프로세스": "2️⃣ 번역 프로세스",
+  "3분 안에 i18nexus를 프로젝트에 적용하세요": "3분 안에 i18nexus를 프로젝트에 적용하세요",
+  "3분 안에 프로젝트에 적용하기": "3분 안에 프로젝트에 적용하기",
+  "3️⃣ 언어 전환 흐름": "3️⃣ 언어 전환 흐름",
+  "= useTranslation() 훅 주입": "= useTranslation() 훅 주입",
+  "• 기존 번역은 모두 보존": "• 기존 번역은 모두 보존",
+  "• 모든 한국어 텍스트를 t(\"...\") 로 래핑": "• 모든 한국어 텍스트를 t(\"...\") 로 래핑",
+  "• 새로운 키만 추가": "• 새로운 키만 추가",
+  "• 자동으로 알파벳순 정렬": "• 자동으로 알파벳순 정렬",
+  "• useTranslation import 추가": "• useTranslation import 추가",
+  "✨ 자동으로 처리되는 것들:": "✨ 자동으로 처리되는 것들:",
+  "💡 자동으로 import 추가 → useTranslation 훅 주입 → 한국어 텍스트 래핑": "💡 자동으로 import 추가 → useTranslation 훅 주입 → 한국어 텍스트 래핑",
+  "🔍 스마트 병합 기능:": "🔍 스마트 병합 기능:",
+  "개발자 경험 최우선": "개발자 경험 최우선",
+  "개발자 친화적": "개발자 친화적",
+  "구조와 동작 원리": "구조와 동작 원리",
+  "기능별 상세 가이드": "기능별 상세 가이드",
+  "기존 코드의 모든 한국어를 자동으로 t() 함수로 래핑합니다": "기존 코드의 모든 한국어를 자동으로 t() 함수로 래핑합니다",
+  "도구": "도구",
+  "동작 원리": "동작 원리",
+  "모든 t() 함수 호출에서 키를 추출하여 en.json, ko.json 생성/업데이트": "모든 t() 함수 호출에서 키를 추출하여 en.json, ko.json 생성/업데이트",
+  "번역 키 추출": "번역 키 추출",
+  "번역 함수 훅": "번역 함수 훅",
+  "변환 전": "변환 전",
+  "변환 후": "변환 후",
+  "복잡한 설정 없이 바로 시작할 수 있습니다. TypeScript 완벽 지원으로 타입 안전성을 보장하며, 직관적인 API를 제공합니다.": "복잡한 설정 없이 바로 시작할 수 있습니다. TypeScript 완벽 지원으로 타입 안전성을 보장하며, 직관적인 API를 제공합니다.",
+  "불필요한 리렌더링을 방지하고, 메모이제이션을 활용하여 최적의 성능을 제공합니다. React 18의 동시성 기능과도 완벽하게 호환됩니다.": "불필요한 리렌더링을 방지하고, 메모이제이션을 활용하여 최적의 성능을 제공합니다. React 18의 동시성 기능과도 완벽하게 호환됩니다.",
+  "빠른 시작": "빠른 시작",
+  "빠른 시작 →": "빠른 시작 →",
+  "빠른시작": "빠른시작",
+  "상세": "상세",
+  "상세 설명": "상세 설명",
+  "설계 원칙": "설계 원칙",
+  "성능 최적화": "성능 최적화",
+  "소개": "소개",
+  "수동 작업을 최소화하고 CLI 도구로 모든 반복 작업을 자동화합니다. 개발자는 코드 작성에만 집중하고, 나머지는 도구가 처리합니다.": "수동 작업을 최소화하고 CLI 도구로 모든 반복 작업을 자동화합니다. 개발자는 코드 작성에만 집중하고, 나머지는 도구가 처리합니다.",
+  "수동으로 하나하나 t() 함수를 추가할 필요 없이, CLI 도구가 자동으로 모든 한국어 텍스트를 감지하고 변환합니다.": "수동으로 하나하나 t() 함수를 추가할 필요 없이, CLI 도구가 자동으로 모든 한국어 텍스트를 감지하고 변환합니다.",
+  "시스템 아키텍처": "시스템 아키텍처",
+  "실제 동작 모습": "실제 동작 모습",
+  "실행 명령어": "실행 명령어",
+  "언어 관리 클래스": "언어 관리 클래스",
+  "언어 전환 훅": "언어 전환 훅",
+  "완료!": "완료!",
+  "완벽한 SSR 지원": "완벽한 SSR 지원",
+  "완전한 React i18n 자동화 툴킷": "완전한 React i18n 자동화 툴킷",
+  "왜 i18nexus인가?": "왜 i18nexus인가?",
+  "이제 앱이 완전히 국제화되었습니다": "이제 앱이 완전히 국제화되었습니다",
+  "자동 코드 변환의 힘": "자동 코드 변환의 힘",
+  "자동화 도구 사용법": "자동화 도구 사용법",
+  "자동화 우선": "자동화 우선",
+  "직관적인 API, 명확한 에러 메시지, 완벽한 TypeScript 지원으로 개발자가 쉽고 빠르게 사용할 수 있도록 설계되었습니다.": "직관적인 API, 명확한 에러 메시지, 완벽한 TypeScript 지원으로 개발자가 쉽고 빠르게 사용할 수 있도록 설계되었습니다.",
+  "클라이언트 라이브러리": "클라이언트 라이브러리",
+  "패키지 설치": "패키지 설치",
+  "플러그인 시스템, 커스텀 로더, 다양한 스토리지 백엔드 지원으로 프로젝트의 요구사항에 맞게 확장할 수 있습니다.": "플러그인 시스템, 커스텀 로더, 다양한 스토리지 백엔드 지원으로 프로젝트의 요구사항에 맞게 확장할 수 있습니다.",
+  "하드코딩된 한국어를 자동으로 감지하여 t() 함수로 래핑하고, 번역 파일을\n          관리하는 완전 자동화된 국제화 솔루션입니다.": "하드코딩된 한국어를 자동으로 감지하여 t() 함수로 래핑하고, 번역 파일을 관리하는 완전 자동화된 국제화 솔루션입니다.",
+  "한 줄의 명령어로 모든 한국어 텍스트를 자동 변환": "한 줄의 명령어로 모든 한국어 텍스트를 자동 변환",
+  "한국어 자동 래핑": "한국어 자동 래핑",
+  "한국어 텍스트 자동 래핑": "한국어 텍스트 자동 래핑",
+  "확장성": "확장성",
+  "환영합니다": "환영합니다",
+  "i18nexus 코어 라이브러리와 CLI 도구를 설치합니다": "i18nexus 코어 라이브러리와 CLI 도구를 설치합니다",
+  "i18nexus의 구조와 동작 원리를 이해하세요": "i18nexus의 구조와 동작 원리를 이해하세요",
+  "layout.tsx에 I18nProvider를 설정합니다": "layout.tsx에 I18nProvider를 설정합니다",
+  "Next.js App Router와 완벽하게 통합되어 하이드레이션 문제가 전혀 없습니다. 쿠키 기반 언어 관리로 첫 렌더링부터 올바른 언어를 표시합니다.": "Next.js App Router와 완벽하게 통합되어 하이드레이션 문제가 전혀 없습니다. 쿠키 기반 언어 관리로 첫 렌더링부터 올바른 언어를 표시합니다.",
+  "Provider 가이드 →": "Provider 가이드 →",
+  "Provider 설정": "Provider 설정",
+  "React Context 설정": "React Context 설정",
+  "React Context 프로바이더": "React Context 프로바이더",
+  "t-wrapper 실행 데모 GIF": "t-wrapper 실행 데모 GIF",
+  "t-wrapper가 실시간으로 코드를 변환하는 과정": "t-wrapper가 실시간으로 코드를 변환하는 과정"
 }
