--- a/i18n/package.json
+++ b/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nexus",
-  "version": "2.1.0",
+  "version": "2.1.3",
   "description": "React i18n toolkit with cookie-based language management and SSR support",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -41,10 +41,9 @@
     "internationalization",
     "translation",
     "cookie",
-    "google-sheets",
     "typescript",
-    "babel",
-    "ast"
+    "ssr",
+    "next.js"
   ],
   "author": "manNomi <hanmw110@naver.com>",
   "license": "MIT",
@@ -55,7 +54,7 @@
   "bugs": {
     "url": "https://github.com/manNomi/i18nexus/issues"
   },
-  "homepage": "https://github.com/manNomi/i18nexus#readme",
+  "homepage": "https://i18nexus-demo.vercel.app",
   "files": [
     "dist",
     "README.md",
@@ -65,15 +64,6 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "dependencies": {
-    "@babel/generator": "^7.23.0",
-    "@babel/parser": "^7.23.0",
-    "@babel/traverse": "^7.23.0",
-    "@babel/types": "^7.23.0",
-    "commander": "^11.0.0",
-    "glob": "^10.3.0",
-    "googleapis": "^128.0.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
@@ -82,8 +72,6 @@
     "@eslint/js": "^9.36.0",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^13.4.0",
-    "@types/babel__generator": "^7.6.0",
-    "@types/babel__traverse": "^7.20.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
@@ -96,13 +84,11 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^16.4.0",
-    "i18next": "^23.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.3.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.2.0",
     "typescript-eslint": "^8.44.1"
